<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.activities.customer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.activities.customer.ui.ticket.TicketFragment"
        android:label="@string/title_ticket"
        tools:layout="@layout/fragment_ticket" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.activities.customer.ui.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="xml\root_preferences.xml"/>
</navigation>