<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1FB4BD"
    android:backgroundTint="@color/notificationBarColor">
    <LinearLayout
        android:id="@+id/main_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/notificationBarColor">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:background="@color/mainBackgroundColor"/>

    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/smart_queue_system"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title_bar"
        android:orientation="vertical"
        android:background="@color/mainBackgroundColor"
        android:gravity="center">

        <!--        <com.google.android.material.appbar.AppBarLayout-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_width="wrap_content" />-->


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            android:hint="Company name"
            android:autofillHints="Company name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_sign_in_company_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            android:hint="@string/email"
            android:autofillHints="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_in_company_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            app:boxBackgroundColor="@color/mainBackgroundColor"
            app:hintTextColor="@color/actionBarColor"
            app:passwordToggleEnabled="true"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_sign_in_company_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>






        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_butten"
            android:text="@string/sing_in"
            android:textColor="#1FB4BD"
            android:textSize="18sp"
            app:backgroundTint="#FFFFFF"
            android:layout_margin="15dp"/>




    </LinearLayout>

    <ImageView
        android:id="@+id/back_to_sign_in_page_arrow"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


</androidx.constraintlayout.widget.ConstraintLayout>